1. Ajustado todos os testes unitarios e os de integracao 2. Trocando lib de log